Fixed alignments on Header
created flex classes for headers (specifically: column layout for header general).

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,7 +4,7 @@ body {
     color:rgba(56, 56, 56, 1);
 } 
 
-/*These are the typography styles*/
+/*These are typography styles*/
 
 h1 {
     font-family: 'Spectral', serif;
@@ -49,7 +49,7 @@ h5 {
     font-size: 12px;
 }
 
-/*These are the color styles*/
+/*These are color styles*/
 
 .colorBright {
     color: rgba(242, 5, 116, 1);
@@ -79,7 +79,7 @@ h5 {
     color: rgba(29, 29, 29, 1);
 }
 
-/*These are my Flexbox Styles*/
+/*These are Flexbox Styles*/
 
 .rowFlex {
     display: flex;
@@ -96,7 +96,7 @@ h5 {
 }
 
 .flexLeft{
-    align-self: flex-start;
+    align-self: flex-end;
     justify-self: flex-end;
 }
 
